# diplom-work

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build_and_deploy.yaml
bot/: manager.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py  runbot2.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_user_id.py  0003_tguser_verification_code_alter_tguser_user_id.py  0004_rename_user_id_tguser_user.py  0005_rename_user_tguser_app_user.py  0006_tgstate.py  0007_alter_tgstate_state.py  0008_alter_tgstate_title.py  0009_rename_state_tgstate_step.py  0010_alter_tguser_unique_together.py
bot/tg/: client.py  dc.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py
deploy/: .env  docker-compose.prod.yaml  docker-compose.yaml  nginx.conf
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_board_category_board_boardparticipant.py  0003_create_new_objects.py  0004_alter_category_board.py
tests/: factories.py  fixtures.py
tests/core_tests/: login_test.py  logout_test.py  profile_test.py  signup_test.py  update_password_test.py  update_user_info_test.py
tests/goals_tests/: goal_create_tests.py  goal_delete_tests.py  goal_retrieve_tests.py  goal_update_tests.py  goals_list_tests.py
todolist/: settings.py  urls.py
(+10 files in other folders)
